# directcov

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
include/directcov/: DirectCov.h
src/: main.cpp
src/directcov/: __init__.py
tests/: test_compiled.py  test_package.py
